
    HIVE-1878 Set the version of Hive trunk to '0.7.0-SNAPSHOT' to avoid
    confusing it with a release
    (Carl Steinbach via jvs)

    HIVE-1907 Store jobid in ExecDriver
    (namit via He Yongqiang)

    HIVE-1865 redo zookeeper hive lock manager
    (namit via He Yongqiang)

    HIVE-1978 Hive SymlinkTextInputFormat does not estimate input size correctly
    (He Yongqiang via Ning Zhang)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-1915. Authorization on database level is broken.
    (He Yongqiang via cws)

    HIVE-1203. HiveInputFormat.getInputFormatFromCache "swallows" cause exception when trowing IOExcpetion
    (Vladimir Klimontovich via cws)

    HIVE-1524. Parallel Execution fails if mapred.job.name is set
    (Ning Zhang via jssarma)

    HIVE-1509. Hive should kill query if too many files are created by it
    (Ning Zhang via jssarma)

    HIVE-1471. CTAS should unescape column names in select-clause
    (Ning Zhang via jssarma)

    HIVE-1440. Bug in RCFiles with local work (map-join or sort-merge join)
    (He Yongqiang via namit)

    HIVE-1454. insert overwrite and CTAS fail in hive local mode
    (Joydeep Sen Sarma via He Yongqiang )

    HIVE-1305. add progress in join and groupby
    (Siying Dong via He Yongqiang)

    HIVE-1453. Make Eclipse launch tempaltes auto-adjust to Hive
    version number changes.
    (Arvind Prabhakar via jvs)

    HIVE-1056. Predicate push down does not work with UDTF's
    (Paul Yang via He Yongqiang)

    HIVE-1385. UDF field() doesn't work
    (Siying Dong via He Yongqiang)

    HIVE-1455. lateral view does not work with column pruning
    (Paul Yang via He Yongqiang)

    HIVE-1470. percentile_approx() fails with more than 1 reducer
    (Mayank Lahiri via jvs)

    HIVE-1425. hive.task.progress should be added to conf/hive-default.xml
    (John Sichi via Ning Zhang)

    HIVE-1492. FileSinkOperator should remove duplicated files from the same task based on file sizes
    (Ning Zhang via He Yongqiang)
